# ChangeLog for media-gfx/fotoxx
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/fotoxx/ChangeLog,v 1.4 2010/07/26 14:01:33 ssuominen Exp $

  26 Jul 2010; Samuli Suominen <ssuominen@gentoo.org> fotoxx-10.7.ebuild,
  files/fotoxx-makefile.patch:
  Fix building with -Wl,--as-needed wrt #329901 by Nao Nakashima.

  20 Jul 2010; Andrey Grozin <grozin@gentoo.org> fotoxx-10.7.ebuild,
  files/fotoxx-makefile.patch:
  Ebuild cleanup, ~amd64 added, thanks to Joshua Saddler
  <nightmorph@gentoo.org>

  19 Jul 2010; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
  metadata.xml:
  Added missing herd tag.

*fotoxx-10.7 (16 Jul 2010)

  16 Jul 2010; Andrey Grozin <grozin@gentoo.org> +fotoxx-10.7.ebuild,
  +files/fotoxx-makefile.patch, +metadata.xml:
  Initial import, partly based on an old ebuild in sunrise
