@@ -1,6 +1,11 @@
 # ChangeLog for media-gfx/fotoxx
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/fotoxx/ChangeLog,v 1.4 2010/07/26 14:01:33 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/fotoxx/ChangeLog,v 1.5 2010/08/03 10:26:31 grozin Exp $
+
+*fotoxx-10.8 (03 Aug 2010)
+
+  03 Aug 2010; Andrey Grozin <grozin@gentoo.org> +fotoxx-10.8.ebuild:
+  Version bump
 
   26 Jul 2010; Samuli Suominen <ssuominen@gentoo.org> fotoxx-10.7.ebuild,
   files/fotoxx-makefile.patch:
